--- a/src/css-classes.css
+++ b/src/css-classes.css
@@ -25,3 +25,12 @@
 .theme-card {
   @apply col-span-2 h-[220px] rounded-[10px] px-5 py-[25px] md:col-span-1 bg-[url('./assets/bg-theme-1.png')] bg-cover text-white
 }
+
+/* STATUS */
+.complete {
+  @apply py-1 text-[12px] px-3 bg-[#651CFF10] text-cViolet rounded-full w-max
+}
+
+.pending {
+  @apply py-1 text-[12px] px-3 bg-[#5A5A5A10] text-cBlack20 rounded-full w-max
+}
