--- a/src/css-classes.css
+++ b/src/css-classes.css
@@ -35,6 +35,11 @@
   @apply py-1 text-[12px] px-3 bg-[#5A5A5A10] text-cBlack20 rounded-full w-max
 }
 
+/* BANK GENERATED LOGOS */
+.bank-set {
+  @apply h-[45px] w-[45px] rounded-full flex items-center justify-center text-[12px] text-white
+}
+
 /* CUSTOM SCROLL */
 .table-container::-webkit-scrollbar {
   width: 12px; /* Width of the scrollbar */
@@ -46,7 +51,7 @@
 }
 
 .table-container::-webkit-scrollbar-thumb {
-  background-color: #5A5A5A; /* Color of the scrollbar handle */
+  background-color: #5a5a5a9f; /* Color of the scrollbar handle */
   border-radius: 10px; /* Rounded edges for the handle */
   border: 3px solid #f1f1f1; /* Space between track and scrollbar handle */
 }
@@ -54,7 +59,7 @@
 /* Custom Scrollbar for Firefox */
 .table-container {
   scrollbar-width: thin; /* Thin scrollbar */
-  scrollbar-color: #5A5A5A #f1f1f1; /* Color of scrollbar handle and track */
+  scrollbar-color: #5a5a5a9f #f1f1f1; /* Color of scrollbar handle and track */
 }
 
 /* Optional - custom padding to make the scrollbar stand out */
